[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Texturas/Espirito da Floresta/animacao_parado.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Espirito da Floresta/Espirito.gd" type="Script" id=2]
[ext_resource path="res://src/Animacoes/Espirito da Floresta/Espiritoparado.tres" type="Animation" id=3]
[ext_resource path="res://src/Fonts/EastmanRomanTrial-Bold.otf" type="DynamicFontData" id=4]


[sub_resource type="Animation" id=1]
length = 0.001

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 330, 195 )

[sub_resource type="DynamicFont" id=3]
size = 17
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 17
font_data = ExtResource( 4 )

[node name="Espirito" type="Node2D"]
position = Vector2( -30, 47 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 0 )
texture = ExtResource( 1 )
hframes = 10
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/parado = ExtResource( 3 )

[node name="Detector" type="Area2D" parent="."]
position = Vector2( -75, -5 )
collision_layer = 32
collision_mask = 32

[node name="Shape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2( -242, 37 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.236
anchor_top = 0.089
anchor_right = 0.244
anchor_bottom = 0.105
margin_left = -81.0
margin_top = -360.0
margin_right = 69.592
margin_bottom = -274.672

[node name="Label" type="Label" parent="Panel"]
anchor_left = -0.288
anchor_top = -3.821
anchor_right = -0.288
anchor_bottom = -3.821
margin_left = -59.6295
margin_top = -33.9617
margin_right = 88.3705
margin_bottom = 46.0383
custom_fonts/font = SubResource( 3 )
align = 1
autowrap = true

[node name="LabelAviso" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -250.0
margin_top = -660.0
margin_right = 330.0
margin_bottom = -350.0
custom_fonts/font = SubResource( 4 )
align = 1
autowrap = true

[connection signal="body_entered" from="Detector" to="." method="_on_Detector_body_entered"]
[connection signal="body_exited" from="Detector" to="." method="_on_Detector_body_exited"]
